--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This bot will monitor the cryptocurrency market and show the time to buy when the currency is low and sell when it is high",
   "main": "index.js",
   "scripts": {
-    "dev":"node -r dotenv/config src/api.js",
+    "dev":"node -r dotenv/config src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
